<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="homeStats"
            type="com.matchcenter.davidsebestyen.matchcenter.data.Stats"/>

        <variable
            name="awayStats"
            type="com.matchcenter.davidsebestyen.matchcenter.data.Stats"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:baselineAligned="false"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:gravity="center"
                style="@style/SecondaryHeaderTextStyle"
                android:text="@string/stats_score_txt"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@{homeStats.scoreAsString}"
                    style="@style/SecondaryTextStyle"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    style="@style/SecondaryTextStyle"
                    android:text="@{awayStats.scoreAsString}"
                    />

            </LinearLayout>

            <include layout="@layout/divider_horizontal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:gravity="center"
                style="@style/SecondaryHeaderTextStyle"
                android:text="@string/stats_half_time_score"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@{homeStats.halfTimeScoreAsString}"
                    style="@style/SecondaryTextStyle"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    style="@style/SecondaryTextStyle"
                    android:text="@{awayStats.halfTimeScoreAsString}"
                    />

            </LinearLayout>

            <include layout="@layout/divider_horizontal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:gravity="center"
                style="@style/SecondaryHeaderTextStyle"
                android:text="@string/stats_possession_txt"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@{homeStats.possessionAsString}"
                    style="@style/SecondaryTextStyle"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    style="@style/SecondaryTextStyle"
                    android:text="@{awayStats.possessionAsString}"
                    />

            </LinearLayout>

            <include layout="@layout/divider_horizontal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:gravity="center"
                style="@style/SecondaryHeaderTextStyle"
                android:text="@string/stats_shots_text"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@{homeStats.shotsAsString}"
                    style="@style/SecondaryTextStyle"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    style="@style/SecondaryTextStyle"
                    android:text="@{awayStats.shotsAsString}"
                    />



            </LinearLayout>

            <include layout="@layout/divider_horizontal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:gravity="center"
                style="@style/SecondaryHeaderTextStyle"
                android:text="@string/stats_shots_ontarget_text"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@{homeStats.shotsOnTargetAsString}"
                    style="@style/SecondaryTextStyle"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    style="@style/SecondaryTextStyle"
                    android:text="@{awayStats.shotsOnTargetAsString}"
                    />

            </LinearLayout>

            <include layout="@layout/divider_horizontal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:gravity="center"
                style="@style/SecondaryHeaderTextStyle"
                android:text="@string/stats_corners_text"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@{homeStats.cornersAsString}"
                    style="@style/SecondaryTextStyle"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    style="@style/SecondaryTextStyle"
                    android:text="@{awayStats.cornersAsString}"
                    />

            </LinearLayout>

            <include layout="@layout/divider_horizontal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:gravity="center"
                style="@style/SecondaryHeaderTextStyle"
                android:text="@string/stats_fouls_text"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@{homeStats.foulsAsString}"
                    style="@style/SecondaryTextStyle"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    style="@style/SecondaryTextStyle"
                    android:text="@{awayStats.foulsAsString}"
                    />

            </LinearLayout>

            <include layout="@layout/divider_horizontal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:gravity="center"
                style="@style/SecondaryHeaderTextStyle"
                android:text="@string/stats_yellow_card_text"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@{homeStats.yellowCardsAsString}"
                    style="@style/SecondaryTextStyle"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    style="@style/SecondaryTextStyle"
                    android:text="@{awayStats.yellowCardsAsString}"
                    />

            </LinearLayout>

            <include layout="@layout/divider_horizontal"/>

        </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:gravity="center"
            style="@style/SecondaryHeaderTextStyle"
            android:text="@string/stats_red_cards_text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@{homeStats.redCardsAsString}"
                style="@style/SecondaryTextStyle"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                style="@style/SecondaryTextStyle"
                android:text="@{awayStats.redCardsAsString}"
                />

        </LinearLayout>

    </LinearLayout>
    </LinearLayout>
    </ScrollView>




</layout>